<resources>
    <string name="app_name">StarWars</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_goToFavoritesFromMainMenu">Favorites</string>
    <string name="button_goToMovieListFromMainMenu">movie list</string>
    <string name="button_goToPlanetListFromMainMenu">planet list</string>
    <string name="button_goToCharacterListFromMainMenu">character list</string>
    <string name="button_goToMainMenuFromCharacterList">main menu</string>
    <string name="button_goToMainMenuFormMovieList">main menu</string>
    <string name="button_goToMainMenuFromPlanetList">main menu</string>
    <string name="button_goToHomeWorldFormCharacterInfo">homeworld</string>
    <string name="button_goToCharacterMovieListFromCharacterInfo">movies</string>
    <string name="button_goToMainMenuFromCharacterInfo">main menu</string>
    <string name="button_goToCharacterListFromCharacterInfo">Back to character list</string>
    <string name="textview_characterName">character name</string>
    <string name="textview_characterHeight">height</string>
    <string name="textview_characterWeight">weight</string>
    <string name="textview_dateOfBirth">dateOfBirth</string>
    <string name="textview_hairColor">hairColor</string>
    <string name="textview_skinColor">skinColor</string>
    <string name="textview_genderOfCharacter">gender</string>
    <string name="textview_eyeColor">eyeColor</string>
    <string name="button_goToFavouriteMovies">favourtie movies</string>
    <string name="button_goToMainMenuFromFavourites">main menu</string>
    <string name="button_goToFavouriteCharacter">favourite characters</string>
    <string name="button_goToFavouritePlanet">favourite planets</string>
    <string name="textview_idMovie">id</string>
    <string name="textview_titleOfMovie">title</string>
    <string name="textview_quotation">quotation</string>
    <string name="textview_dateOfRelease">dateOfRelease</string>
    <string name="textview_direction">director</string>
    <string name="textview_movieProducer">movieProducer</string>
    <string name="button_goToMainMenuFromMovieInfo">main menu</string>
    <string name="button_goToMovieListFromMovieInfo">Back to movie list</string>
    <string name="button_goToMoviePlanetsFromMovieInfo">movie planets</string>
    <string name="button_goToMovieCharactersFromMovieInfo">movie characters</string>
    <string name="textview_nameOfThePlanet">nameOfThePlanet</string>
    <string name="textview_climate">climate</string>
    <string name="textview_diameter">diameter</string>
    <string name="textview_rotation">rotation</string>
    <string name="textview_orbital">orbital</string>
    <string name="textview_population">population</string>
    <string name="textview_terrain">terrain</string>
    <string name="button_goToPlanetListFormPlanetInfo">Back to planet list</string>
    <string name="button_goToMainMenuFromPlanetInfo">main menu</string>
    <string name="button_goToCharacterListFromPlanetInfo">Character list</string>
    <string name="button_goToMovieListFromPlanetInfo">Movie list</string>
    <string name="button_chooseElementFromTheList">choose</string>
    <string name="textview_nameOfTheElementOfTheList">Name</string>
    <string name="button_goToMenuFromFavouritePlanets">main menu</string>
    <string name="button_goToMenuFromFaouriteMovies">main menu</string>
    <string name="button_goToMenuFromFavouriteCharacters">main menu</string>
    <string name="button_goToMenuFromFavouriteCharacterInfo">menu</string>
    <string name="button_goToFavouritesFromFavouriteCharacterInfo">favourites</string>
    <string name="button_goToFavouriteCharactersFromFavouriteCharacterInfo">favourite characters</string>
    <string name="textview_heightOfFavouriteCharacter" />
    <string name="textView_WeightOfFavouriteCharacter" />
    <string name="button_goToMenuFromFavouritePlanetInfo">menu</string>
    <string name="button_goToFavouritesFromFavouritePlanetInfo">favourites</string>
    <string name="button_goToFavouritePlanetsFromFavouritePlanetInfo">favourite planets</string>
    <string name="button_goToMenuFromFavouriteMovieInfo">menu</string>
    <string name="button_goToFavouritesFromFavouriteMovieInfo">favourites</string>
    <string name="button_goToFavourtieMoviesFromFavouriteMovieInfo">favourite movies</string>
</resources>