<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    tools:context=".view.fragment.MainMenu" >

    <Button
        android:id="@+id/button_goToFavoritesFromMainMenu"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="32dp"
        android:text="@string/button_goToFavoritesFromMainMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_goToCharacterListFromMainMenu"
        app:layout_constraintStart_toStartOf="@+id/button_goToCharacterListFromMainMenu"
        android:backgroundTint="@color/button_style"/>

    <Button
        android:id="@+id/button_goToCharacterListFromMainMenu"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_goToCharacterListFromMainMenu"
        app:layout_constraintBottom_toTopOf="@+id/button_goToFavoritesFromMainMenu"
        app:layout_constraintEnd_toEndOf="@+id/button_goToPlanetListFromMainMenu"
        app:layout_constraintStart_toStartOf="@+id/button_goToPlanetListFromMainMenu"
        android:backgroundTint="@color/button_style"/>

    <Button
        android:id="@+id/button_goToPlanetListFromMainMenu"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_goToPlanetListFromMainMenu"
        app:layout_constraintBottom_toTopOf="@+id/button_goToCharacterListFromMainMenu"
        app:layout_constraintEnd_toEndOf="@+id/button_goToMovieListFromMainMenu"
        app:layout_constraintStart_toStartOf="@+id/button_goToMovieListFromMainMenu"
        android:backgroundTint="@color/button_style"/>

    <Button
        android:id="@+id/button_goToMovieListFromMainMenu"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_goToMovieListFromMainMenu"
        app:layout_constraintBottom_toTopOf="@+id/button_goToPlanetListFromMainMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/button_style"/>

    <ImageView
        android:id="@+id/imageView_mainMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_goToMovieListFromMainMenu"
        app:layout_constraintEnd_toEndOf="@+id/button_goToMovieListFromMainMenu"
        app:layout_constraintStart_toStartOf="@+id/button_goToMovieListFromMainMenu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:src="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>